--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./index.css">
   </head>
 
-  <body class="orange">
+  <body class="green">
 
     <div class="container">
       <!-- substitua aqui o link da imagem do seu cartão de visita!! Use o endereço da imagem do seu perfil do github! -->
